// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`context-files end-to-end 1`] = `
[
  {
    "content": [
      {
        "text": "<context_update>
These files are part of your context. This is the latest information about the content of each file.
From now on, whenever any of these files are updated by the user, you will get a message letting you know.
File \`poem.txt\`
Moonlight whispers through the trees,
Silver shadows dance with ease.
Stars above like diamonds bright,
Paint their stories in the night.

</context_update>",
        "type": "text",
      },
      {
        "text": "check out this file",
        "type": "text",
      },
      {
        "cache_control": {
          "type": "ephemeral",
        },
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
CRITICAL: When using the edl tool, NEVER use large multi-line heredoc patterns in select/select_one. Large text blocks are fragile and wasteful.
Instead, use line ranges (select 42-58), or select the first line then extend_forward to the last line boundary.
WRONG: select_one with 5+ lines of text in a heredoc
RIGHT: select_one first line, then extend_forward to match the end
</system-reminder>",
        "type": "text",
      },
    ],
    "role": "user",
  },
]
`;

exports[`context-files multiple, weird path names 1`] = `
[
  {
    "content": [
      {
        "text": "<context_update>
These files are part of your context. This is the latest information about the content of each file.
From now on, whenever any of these files are updated by the user, you will get a message letting you know.
File \`poem.txt\`
Moonlight whispers through the trees,
Silver shadows dance with ease.
Stars above like diamonds bright,
Paint their stories in the night.

File \`poem 3.txt\`
poem3

</context_update>",
        "type": "text",
      },
      {
        "text": "check out this file",
        "type": "text",
      },
      {
        "cache_control": {
          "type": "ephemeral",
        },
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
CRITICAL: When using the edl tool, NEVER use large multi-line heredoc patterns in select/select_one. Large text blocks are fragile and wasteful.
Instead, use line ranges (select 42-58), or select the first line then extend_forward to the last line boundary.
WRONG: select_one with 5+ lines of text in a heredoc
RIGHT: select_one first line, then extend_forward to match the end
</system-reminder>",
        "type": "text",
      },
    ],
    "role": "user",
  },
]
`;
